--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "imports-loader": "^0.6.5",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "mongoose": "~4.1.6",
     "morgan": "~1.6.1",
