--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URI="mongodb://localhost:27017/cruddyauthblog-react"
+DATABASE_URI="mongodb://localhost:27017/smxlxblog-react"
 SESSION_SECRET="smxlx fire han"
 DEV_PORT=3000
