--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cruddyAuthBlog",
+  "name": "Blog",
   "version": "0.0.0",
   "scripts": {
     "start": "nodemon ./ --ignore 'assets/javascripts/**/*' --ignore 'public/javascripts/**/*'",
@@ -26,7 +26,10 @@
     "morgan": "~1.6.1",
     "nodemon": "~1.9.1",
     "react": "^15.3.0",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^15.2.0",
+    "react-helmet": "^5.1.3",
+    "react-infinite": "^0.11.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.6.1",
     "redux": "^3.5.1",
