--- a/package.json
+++ b/package.json
@@ -10,31 +10,36 @@
   },
   "dependencies": {
     "@types/prop-types": "^15.5.1",
+    "axios": "^0.12.0",
     "body-parser": "~1.13.2",
     "compression": "^1.6.1",
+    "draft-js": "^0.10.1",
+    "draft-js-multidecorators": "*",
+    "draft-js-prism": "*",
+    "ejs": "^2.5.7",
     "express": "~4.13.1",
     "http-proxy-middleware": "^0.17.4",
-    "imports-loader": "^0.6.5",
-    "nodemon": "~1.9.1",
     "react": "^15.3.0",
+    "material-ui": "^0.16.3",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^15.2.0",
+    "react-dropzone": "^3.4.0",
     "react-helmet": "^5.1.3",
     "react-infinite": "^0.11.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.6.1",
+    "react-tag-input": "^3.0.1",
     "redux": "^3.5.1",
     "redux-devtools": "^3.1.1",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
+    "redux-form": "^5.3.2",
     "redux-thunk": "^2.0.1",
     "serve-favicon": "~2.3.0",
-    "superagent": "^1.8.3",
-    "swig": "^1.4.2",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
-    "axios": "^0.12.0",
+    "nodemon": "~1.9.1",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.1",
     "babel-polyfill": "^6.3.14",
@@ -43,19 +48,12 @@
     "babel-preset-stage-0": "^6.3.18",
     "classnames": "*",
     "css-loader": "^0.23.1",
-    "draft-js": "^0.7.0",
-    "draft-js-multidecorators": "*",
-    "draft-js-prism": "*",
+    "imports-loader": "^0.6.5",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs": "^0.8.1",
     "file-loader": "^0.9.0",
-    "material-ui": "^0.16.3",
-    "react-dropzone": "^3.4.0",
     "react-hot-loader": "^1.3.0",
     "react-router-scroll": "^0.2.1",
-    "react-tag-input": "^3.0.1",
     "react-tap-event-plugin": "^2.0.0",
-    "redux-form": "^5.3.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
