--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.5.7",
     "express": "~4.13.1",
     "http-proxy-middleware": "^0.17.4",
+    "lodash": "^4.17.4",
     "material-ui": "^0.16.3",
     "react": "^15.3.0",
     "react-addons-shallow-compare": "^15.6.0",
