--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "webpack:prod": "rimraf public/css public/js && webpack --config src/webpack.config.prod.js",
     "webpack:dev": "rimraf public/css public/js && webpack --w --config src/webpack.config.js",
     "build": "webpack --config webpack.config.prod.js",
-    "prod:start": "pm2 start pm2.json",
-    "prod:stop": "pm2 delete blog_front1.0.0",
+    "prod:start": "pm2 start index.js",
+    "prod:stop": "pm2 stop index",
     "postinstall": "npm build"
   },
   "dependencies": {
