--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "body-parser": "~1.13.2",
     "compression": "^1.6.1",
     "draft-js": "^0.10.1",
-    "draft-js-multidecorators": "*",
-    "draft-js-prism": "*",
+    "draft-js-code": "^0.2.0",
+    "draft-js-multidecorators": "^1.0.0",
+    "draft-js-prism": "^1.0.3",
     "ejs": "^2.5.7",
     "express": "~4.13.1",
     "helmet": "^3.8.1",
